[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown"
version = "0.1.0"
description = "A utility for converting various file formats to Markdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Fork maintainer" }
]
keywords = ["markdown", "conversion", "documents", "pdf", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.10",
    "pdfminer.six>=20221105",
    "python-pptx>=0.6.21",
    "chardet>=5.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
audio = [
    "openai-whisper>=20230918",
]
image = [
    "Pillow>=9.0",
]

[project.scripts]
markitdown = "markitdown.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/markitdown"
Repository = "https://github.com/your-org/markitdown"
Issues = "https://github.com/your-org/markitdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
